--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
-<!-- Run code here in the context of Chapter 16-->
-
 <!doctype html>
-<script src="code/16_game.js"></script>
+<script src="code/chapter/16_game.js"></script>
 <script src="code/levels.js"></script>
-
-<link rel="stylesheet" href="style/style.css">
+<script src="code/chapter/17_canvas.js"></script>
 
 <body>
   <script>
-    runGame(GAME_LEVELS, DOMDisplay);
+    runGame(GAME_LEVELS, CanvasDisplay);
   </script>
 </body>
