--- a/fork/index.html
+++ b/fork/index.html
@@ -4,6 +4,8 @@
   <script src="//cdn.jsdelivr.net/npm/phaser@3.12.0/dist/phaser.min.js"></script>
   <script src='scenes/level1.json'></script>
   <script src='scenes/Level1.js'></script>
+  <script src='scenes/level2.json'></script>
+  <script src='scenes/Level2.js'></script>
   <script src='src/game.js'></script>
 </head>
 <body>
